# tauri-sveltekit-typescript-boilerplate

./: .eslintrc.cjs  .prettierignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  postcss.config.js  svelte.config.js  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src/lib/stores/: example.ts
src/routes/: +layout.svelte  +page.svelte
