[package]
name = "tauri-sveltekit-typescript-boilerplate"
description = "Boilerplate for Tauri and SvelteKit projects in TypeScript"
version = "1.0.0"
authors = [ "equilpres (Слава Соколов)" ]
edition = "2021"
rust-version = "1.79.0"

[profile.release]
opt-level = "z"
debug = 0
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "unwind"
incremental = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta.20", features = [] }
